[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "huber-fusion-clustering"
version = "0.1.0"
description = "Robust fusion clustering with Huber loss and ADMM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "lfxwz", email = "yukang.lu@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "numba>=0.60",
]

[project.urls]
Repository = "https://github.com/lfxwz/huber-fusion-learning-for-longitudinal-data"

[tool.setuptools.packages.find]
where = ["src"]
